--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
 	"license": "MIT",
 	"keywords": [
 		"electron",
-		"typescript",
-		"vuejs",
-		"vuex"
+		"electron-browserwindow",
+		"electron-ipc"
 	],
 	"dependencies": {
 		"electron": "^12.0.4"
